--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using Vite" />
     <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>Pocket Fridge</title>
 
     <!-- Bootstrap 4 -->
